# husky_ur3_simulator

./: LICENSE  README.md
add file/: pr2_indiv_g_d435.launch  pr2_indiv_h_d435.launch
husky_ur3_gazebo/: CMakeLists.txt  package.xml
husky_ur3_gazebo/config/: control.yaml  control_joint.yaml  control_ur3.yaml  position_controller.yaml
husky_ur3_gazebo/launch/: control.launch  control_joint.launch  description.launch  husky_empty_world.launch  husky_playpen.launch  husky_ur3.launch  husky_ur3_HRI_MAP.launch  husky_ur3_HRI_lab.launch  husky_ur3_HRI_lab2.launch  husky_ur3_joint.launch  husky_ur3_khu_5th_corridor.launch  husky_ur3_playpen.launch  husky_ur3_test_world.launch  husky_ur3_test_world_2nd.launch  husky_ur3_with_AR.launch  position_controller.launch  rh_p12_rn_gazebo.launch  spawn_husky.launch  spawn_husky_joint.launch
husky_ur3_gazebo/meshes/: ur3_box.stl
husky_ur3_gazebo/meshes/accessories/: d435_mount.stl  d435_mount_down.stl
husky_ur3_gazebo/src/: gazebo_rh_pub.cpp  husky_ur3_control_joint.py  ur3_control_joint.py
husky_ur3_gazebo/urdf/: d435_camera.urdf.xacro  decorations.urdf.xacro  husky.urdf.xacro  husky_ur3_8DOF.urdf.xacro  husky_ur3_gripper.urdf.xacro  realsense.xacro  rh_p12_rn.gazebo  rh_p12_rn.xacro  rh_p12_rn_gripper.xacro  ur3.urdf.xacro  ur3_gripper.urdf.xacro  ur3_robot.urdf.xacro  ur3_robot_gripper.urdf.xacro  wheel.urdf.xacro
husky_ur3_gazebo/urdf/accessories/: d435_camera_g.urdf.xacro  d435_camera_h.urdf.xacro  kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro  sick_tim571.urdf.xacro
husky_ur3_gazebo/worlds/: HRI_MAP.world  HRI_lab.world  aisle.world  aisle_backup.world  aisle_camera_test.world  can.world  gaitech.world  khu_5th_corridor.world  test_world.world  test_world_2nd.world
husky_ur3_gripper_moveit_config/: CMakeLists.txt  package.xml
husky_ur3_gripper_moveit_config/config/: controllers.yaml  fake_controllers.yaml  husky.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_ur3_gripper_moveit_config/launch/: For_navigation.launch  For_navigation.rviz  Omni_control.launch  Omni_control.rviz  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_ar.launch  demo_camera.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_moveit_controller_manager.launch.xml  husky_ur3_amcl.launch  move_group.launch  moveit(Backup_상흠ver).rviz  moveit.rviz  moveit_edit_backup.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_ur3_gripper_moveit_config/scripts/: 4_orient_grasping.py  AR_marker_manip.py  AR_marker_manip_1.py  AR_marker_manip_mob.py  check_robot_current_pose.py  control_Husky_UR3.py  control_Husky_UR3_10.py  control_Husky_UR3_2.py  control_Husky_UR3_3.py  control_Husky_UR3_4.py  control_Husky_UR3_5.py  control_Husky_UR3_6.py  lidar.py  (+5 more)
husky_ur3_nav_without_map/: CMakeLists.txt  package.xml
husky_ur3_nav_without_map/config/: costmap_common.yaml  planner.yaml
husky_ur3_nav_without_map/launch/: move_base.launch  move_base_without_map.launch
husky_ur3_nav_without_map/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
husky_ur3_navigation/: CMakeLists.txt  package.xml
(+15 files in other folders)
