<?xml version="1.0"?>
<package format="2">
  <name>husky_ur3_nav_without_map</name>
  <version>0.1.0</version>
  <description>The husky_ur3_nav_without_map package</description>


  <maintainer email="qualiashell@naver.com">TaeHyeon Kim</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
